--- a/ha-hoymiles-wifi-addon/config.yaml
+++ b/ha-hoymiles-wifi-addon/config.yaml
@@ -1,9 +1,9 @@
 ---
-name: Hoymiles HMS Wifi Addon
-version: 'v0.3'
-slug: ha-hoymiles-wifi-addon
+name: Hobos Hoymiles HMS Wifi Addon
+version: 'v0.5'
+slug: ha-hoymiles-wifi-addon-hobo
 description: Publishes telemetry information from Hoymiles HMS-XXXXW-T2 micro-inverters to your home assistant MQTT broker
-url: https://github.com/dominikandreas/hms-mqtt-publisher/tree/master/ha-hoymiles-wifi-addon
+url: https://github.com/Hobo2k/hobos-hms-mqtt-publisher/tree/master/ha-hoymiles-wifi-addon
 init: false
 arch:                              # List of supported architectures.
   - armv7
