--- a/ha-hoymiles-wifi-addon-nightly/config.yaml
+++ b/ha-hoymiles-wifi-addon-nightly/config.yaml
@@ -1,9 +1,9 @@
 ---
-name: Hoymiles HMS Wifi Addon (Nightly)
-version: 'v0.4'
-slug: ha-hoymiles-wifi-addon-nightly
+name: Hobos Hoymiles HMS Wifi Addon (Nightly)
+version: 'v0.5'
+slug: ha-hoymiles-wifi-addon-hobo-nightly
 description: Publishes telemetry information from Hoymiles HMS-XXXXW-T2 micro-inverters to your home assistant MQTT broker
-url: https://github.com/dominikandreas/hms-mqtt-publisher/tree/main/ha-hoymiles-wifi-addon-nightly
+url: https://github.com/Hobo2k/hobos-hms-mqtt-publisher/tree/main/ha-hoymiles-wifi-addon-nightly
 init: false
 arch:                              # List of supported architectures.
   - armv7
